# systemarchitech

./: .gitignore  README.md  otel_digital_twin_mvp_spec.docx  package-lock.json
backend/: BACKEND_GUIDE.md  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/activity/: tracker.py
backend/app/api/: activity.py  ingest.py  model.py  simulate.py  telemetry.py
backend/app/ingestion/: log_normalize.py  log_validate.py  metric_normalize.py  metric_validate.py  normalize.py  validate.py
backend/app/model_builder/: graph_builder.py  log_metric_builder.py  stats_builder.py  trace_parser.py
backend/app/providers/: jaeger.py  loki.py  prometheus.py
backend/app/schemas/: activity.py  datasource.py  log.py  metric.py  model.py  otel.py  result.py  scenario.py  span.py
backend/app/services/: telemetry_sync.py
backend/app/simulation/: distributions.py  engine.py  event_queue.py  events.py  service_runtime.py
backend/app/storage/: memory_store.py
backend/app/twin/: router.py  scenario_applier.py  twin_state.py
backend/tests/: test_api_flow.py  test_ingest_multisignal.py  test_model_builder.py  test_telemetry_sync_mode.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: styles.css
frontend/src/api/: client.ts
frontend/src/components/: DatasourcePanel.tsx  GraphView.tsx  LogsPanel.tsx  MetricsPanel.tsx  RunHistoryPanel.tsx  ScenarioForm.tsx
frontend/src/pages/: HomePage.tsx
scripts/: create_model.py  mock_observability_apis.py  stream_sample_telemetry.py
